[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/UI/Mainmenu.gd" type="Script" id=1]
[ext_resource path="res://font/Frostbite_64_main_menu.tres" type="DynamicFont" id=2]
[ext_resource path="res://images/spritesheets/Arena.png" type="Texture" id=3]
[ext_resource path="res://scenes/UI/Mainmenu_theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/UI/TransitionScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://font/Frostbite_32_main_nenu.tres" type="DynamicFont" id=6]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 3 )

[node name="Button_container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -256.0
margin_right = 128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Button_container"]
margin_right = 256.0
margin_bottom = 34.0
text = "Start"

[node name="Tutorial" type="Button" parent="Button_container"]
margin_top = 38.0
margin_right = 256.0
margin_bottom = 72.0
text = "Tutorial"

[node name="Options" type="Button" parent="Button_container"]
margin_top = 76.0
margin_right = 256.0
margin_bottom = 110.0
text = "Options"

[node name="Quit" type="Button" parent="Button_container"]
margin_top = 114.0
margin_right = 256.0
margin_bottom = 148.0
text = "Quit"

[node name="Start_container" type="VBoxContainer" parent="."]
visible = false
margin_left = 512.0
margin_top = 464.0
margin_right = 768.0
margin_bottom = 552.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Start_container"]
margin_right = 256.0
margin_bottom = 34.0
text = "Start"

[node name="CheckButton" type="CheckButton" parent="Start_container"]
margin_top = 38.0
margin_right = 256.0
margin_bottom = 102.0
text = "Renown"

[node name="GridContainer" type="HSplitContainer" parent="Start_container"]
margin_top = 106.0
margin_right = 256.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 45

[node name="Label" type="Label" parent="Start_container/GridContainer"]
margin_top = 5.0
margin_right = 117.0
margin_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
text = "Level"
align = 1
valign = 1

[node name="SpinBox" type="SpinBox" parent="Start_container/GridContainer"]
margin_left = 129.0
margin_right = 256.0
margin_bottom = 44.0
max_value = 0.0
align = 1
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Renown_text" type="Label" parent="Start_container"]
margin_top = 154.0
margin_right = 256.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
max_lines_visible = 3

[node name="Return" type="Button" parent="Start_container"]
margin_top = 192.0
margin_right = 256.0
margin_bottom = 226.0
text = "Return"

[node name="Options_container" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -256.0
margin_right = 128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volum_label" type="Label" parent="Options_container"]
margin_right = 256.0
margin_bottom = 14.0
text = "Volume"

[node name="Volume_slider" type="HSlider" parent="Options_container"]
margin_top = 18.0
margin_right = 256.0
margin_bottom = 34.0
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="Options_container"]
margin_top = 38.0
margin_right = 256.0
margin_bottom = 58.0
text = "Return"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
margin_left = -246.0
margin_right = 246.0
margin_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Colosseum of Steel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionScreen" parent="." instance=ExtResource( 5 )]
layer = 11

[connection signal="pressed" from="Button_container/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Button_container/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Button_container/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Button_container/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Start_container/Start" to="." method="_on_Startgame_pressed"]
[connection signal="toggled" from="Start_container/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="Start_container/GridContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="Start_container/Return" to="." method="_on_Return_pressed"]
[connection signal="value_changed" from="Options_container/Volume_slider" to="." method="_on_Volume_changed"]
[connection signal="pressed" from="Options_container/Return" to="." method="_on_Return_pressed"]
[connection signal="transition_done" from="TransitionScreen" to="." method="_on_TransitionScreen_transition_done"]
